fixed image alignment

--- a/sass/themes/payin/sportrelief/components/cards/_cards.scss
+++ b/sass/themes/payin/sportrelief/components/cards/_cards.scss
@@ -20,11 +20,7 @@
   }
 
   &--work {
-    background: url($image-path + "workplace-organisation.jpg") 0 -59px /cover no-repeat;
-
-    @include breakpoint($screen-md) {
-      background-position: center;
-    }
+    background: url($image-path + "workplace-organisation.jpg") 0 0/cover no-repeat;
   }
 
   &--leisure {
